--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve:dev": "vue-cli-service serve --mode dev",
     "build:dev": "vue-cli-service build --mode dev",
     "build": "vue-cli-service build"
   },
