--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "feather-icons": "^4.28.0",
     "moment": "^2.29.1",
-    "vue": "^3.0.0",
+    "vue": "^3.2.29",
+    "vue-feather": "^2.0.0-rc.1",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
