--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VUE_APP_SERVER_BASE_URL=http://localhost:5102/api/analytics
+VITE_CLICKHOUSE_HOST=https://dev.db.wotstat.soprachev.com
+VITE_CLICKHOUSE_USER=public
+VITE_CLICKHOUSE_DATABASE=WOT
