--- a/package.json
+++ b/package.json
@@ -1,38 +1,24 @@
 {
-  "name": "analytics-frontend",
-  "version": "0.1.0",
+  "name": "analytics-frontend-24",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "serve:dev": "vue-cli-service serve --mode dev",
-    "build:dev": "vue-cli-service build --mode dev",
-    "build": "vue-cli-service build"
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "core-js": "^3.6.5",
-    "d3": "^7.3.0",
-    "feather-icons": "^4.28.0",
-    "moment": "^2.29.1",
-    "vue": "^3.2.29",
-    "vue-feather": "^2.0.0-rc.1",
-    "vue-resize": "^2.0.0-alpha.1",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "@clickhouse/client-web": "^0.2.9",
+    "@vueuse/core": "^10.7.2",
+    "vue": "^3.3.11",
+    "vue-router": "4"
   },
   "devDependencies": {
-    "@types/d3": "7.1.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "@vitejs/plugin-vue": "^4.5.2",
+    "sass": "^1.70.0",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8",
+    "vue-tsc": "^1.8.25"
+  }
 }
