--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clickhouse/client-web": "^0.2.9",
     "@vueuse/core": "^10.7.2",
+    "gsap": "^3.12.5",
     "vue": "^3.3.11",
     "vue-router": "4"
   },
