--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@clickhouse/client-web": "^0.2.9",
     "@vueuse/core": "^10.7.2",
+    "chart.js": "^4.4.1",
     "gsap": "^3.12.5",
     "vue": "^3.3.11",
+    "vue-chartjs": "^5.3.0",
     "vue-router": "4"
   },
   "devDependencies": {
