--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vue-tsc && vite build",
+    "build:dev": "vue-tsc && vite build --mode dev",
     "preview": "vite preview"
   },
   "dependencies": {
