--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,3 @@
-VITE_CLICKHOUSE_HOST=https://dev.db.wotstat.soprachev.com
+VITE_CLICKHOUSE_HOST=https://db.wotstat.info
 VITE_CLICKHOUSE_USER=public
 VITE_CLICKHOUSE_DATABASE=WOT
