add dev mode watermark

--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,4 @@
 VITE_CLICKHOUSE_HOST=https://db.wotstat.info
 VITE_CLICKHOUSE_USER=public
 VITE_CLICKHOUSE_DATABASE=WOT
+VITE_SHOW_DEV_WATERMARK=true
