--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clickhouse/client-web": "^0.2.9",
+    "@timohausmann/quadtree-ts": "^2.2.2",
     "@vueuse/components": "^10.7.2",
     "@vueuse/core": "^10.7.2",
     "chart.js": "^4.4.1",
