--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vueuse/core": "^10.7.2",
     "chart.js": "^4.4.1",
     "gsap": "^3.12.5",
+    "typescript-cubic-spline": "^1.0.1",
     "vue": "^3.3.11",
     "vue-chartjs": "^5.3.0",
     "vue-router": "4"
