--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.70.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
+    "vite-plugin-markdown": "^2.2.0",
     "vue-tsc": "^1.8.25"
   }
 }
