--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/components": "^10.7.2",
     "@vueuse/core": "^10.7.2",
     "chart.js": "^4.4.1",
+    "colorjs.io": "^0.5.0",
     "gsap": "^3.12.5",
     "typescript-cubic-spline": "^1.0.1",
     "vue": "^3.3.11",
