--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --host --mode dev",
     "build": "vue-tsc && vite build --mode prod",
     "build:dev": "vue-tsc && vite build --mode dev",
-    "preview": "vite preview"
+    "preview": "vite preview --host"
   },
   "dependencies": {
     "@clickhouse/client-web": "^0.2.9",
