--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
-    "@clickhouse/client-web": "^0.2.9",
+    "@clickhouse/client-web": "^1.0.1",
     "@timohausmann/quadtree-ts": "^2.2.2",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vueuse/components": "^10.7.2",
     "@vueuse/core": "^10.7.2",
     "chart.js": "^4.4.1",
@@ -20,14 +21,13 @@
     "typescript-cubic-spline": "^1.0.1",
     "vue": "^3.3.11",
     "vue-chartjs": "^5.3.0",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vue-tsc": "^2.0.14"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.5.2",
     "sass": "^1.70.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vite-plugin-markdown": "^2.2.0",
-    "vue-tsc": "^1.8.25"
+    "vite-plugin-markdown": "^2.2.0"
   }
 }
