--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "@vueuse/components": "^10.7.2",
     "@vueuse/core": "^10.7.2",
+    "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.1",
     "colorjs.io": "^0.5.0",
     "gsap": "^3.12.5",
@@ -25,6 +26,7 @@
     "vue-tsc": "^2.0.14"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "sass": "^1.70.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
