--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "colorjs.io": "^0.5.0",
     "gsap": "^3.12.5",
     "typescript-cubic-spline": "^1.0.1",
+    "vite-svg-loader": "^5.1.0",
     "vue": "^3.3.11",
     "vue-chartjs": "^5.3.0",
     "vue-router": "4",
