--- a/.env.dev
+++ b/.env.dev
@@ -3,3 +3,4 @@ VITE_CLICKHOUSE_USER=public
 VITE_CLICKHOUSE_DATABASE=WOT
 VITE_SHOW_DEV_WATERMARK=true
 VITE_DISCORD_URL=https://discord.gg/7K8W9JE6xU
+VITE_WIDGETS_URL=http://localhost:5173
