--- a/.env.dev
+++ b/.env.dev
@@ -4,4 +4,5 @@ VITE_CLICKHOUSE_DATABASE=WOT
 VITE_SHOW_DEV_WATERMARK=true
 VITE_DISCORD_URL=https://discord.gg/7K8W9JE6xU
 VITE_WIDGETS_URL=http://localhost:5173
+VITE_STATIC_URL=https://static.wotstat.info
 # VITE_WIDGETS_URL=https://widgets.wotstat.info
