--- a/.env.prod
+++ b/.env.prod
@@ -4,3 +4,4 @@ VITE_CLICKHOUSE_DATABASE=WOT
 VITE_SHOW_DEV_WATERMARK=false
 VITE_DISCORD_URL=https://discord.gg/7K8W9JE6xU
 VITE_WIDGETS_URL=https://widgets.wotstat.info
+VITE_STATIC_URL=https://static.wotstat.info
