--- a/package.json
+++ b/package.json
@@ -5,36 +5,36 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host --mode dev",
-    "build": "vue-tsc && vite build --mode prod",
-    "build:dev": "vue-tsc && vite build --mode dev",
+    "build": "vue-tsc -b && vite build --mode prod",
+    "build:dev": "vue-tsc -b && vite build --mode dev",
     "preview": "vite preview --host"
   },
   "dependencies": {
-    "@clickhouse/client-web": "^1.0.1",
-    "@mdit/plugin-alert": "^0.13.0",
-    "@mdit/plugin-align": "^0.13.0",
-    "@mdit/plugin-attrs": "^0.13.0",
-    "@mdit/plugin-container": "^0.13.0",
+    "@clickhouse/client-web": "^1.7.0",
+    "@mdit/plugin-alert": "^0.13.1",
+    "@mdit/plugin-align": "^0.13.1",
+    "@mdit/plugin-attrs": "^0.13.1",
+    "@mdit/plugin-container": "^0.13.1",
     "@timohausmann/quadtree-ts": "^2.2.2",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vueuse/components": "^10.7.2",
-    "@vueuse/core": "^10.7.2",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vueuse/components": "^11.2.0",
+    "@vueuse/core": "^11.2.0",
     "canvas-confetti": "^1.9.3",
-    "chart.js": "^4.4.1",
-    "colorjs.io": "^0.5.0",
+    "chart.js": "^4.4.6",
+    "colorjs.io": "^0.5.2",
     "gsap": "^3.12.5",
     "typescript-cubic-spline": "^1.0.1",
     "vite-svg-loader": "^5.1.0",
-    "vue": "^3.3.11",
-    "vue-chartjs": "^5.3.0",
-    "vue-router": "4",
-    "vue-tsc": "^2.0.14"
+    "vue": "^3.5.12",
+    "vue-chartjs": "^5.3.2",
+    "vue-router": "^4.4.5",
+    "vue-tsc": "^2.1.10"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.4",
-    "sass": "^1.70.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8",
+    "sass": "^1.80.6",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10",
     "vite-plugin-markdown": "^2.2.0"
   }
 }
