--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host --mode dev",
-    "build": "vue-tsc -b && vite build --mode prod",
-    "build:dev": "vue-tsc -b && vite build --mode dev",
+    "build": "vue-tsc && vite build --mode prod",
+    "build:dev": "vue-tsc && vite build --mode dev",
     "preview": "vite preview --host"
   },
   "dependencies": {
