--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -15,18 +15,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: oven-sh/setup-bun@v1
 
-      - uses: actions/cache@v4
-        with:
-          path: ~/.bun/install/cache
-          key: ${{ runner.os }}-${{ matrix.bun }}-bun-${{ hashFiles('**/bun.lockb') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ matrix.bun }}-bun-
-
       - name: Install Dependencies
         run: bun install
 
       - name: Build
-        run: npm run build
+        run: bun run build
 
       - name: Configure SSH
         run: |
