total count fix

--- a/.env.prod
+++ b/.env.prod
@@ -5,3 +5,5 @@ VITE_SHOW_DEV_WATERMARK=false
 VITE_DISCORD_URL=https://discord.gg/7K8W9JE6xU
 VITE_WIDGETS_URL=https://widgets.wotstat.info
 VITE_STATIC_URL=https://static.wotstat.info
+VITE_ANALYTICS_REALTIME_URL=wss://realtime.wotstat.info
+# VITE_ANALYTICS_REALTIME_URL=ws://localhost:3000
