--- a/.env.dev
+++ b/.env.dev
@@ -6,3 +6,4 @@ VITE_DISCORD_URL=https://discord.gg/7K8W9JE6xU
 VITE_STATIC_URL=https://static.wotstat.info
 # VITE_WIDGETS_URL=http://localhost:5173
 VITE_WIDGETS_URL=https://widgets.wotstat.info
+VITE_ANALYTICS_REALTIME_URL=ws://localhost:3000
