--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.4.7",
     "colorjs.io": "^0.5.2",
     "gsap": "^3.12.7",
+    "idb-keyval": "^6.2.2",
     "typescript-cubic-spline": "^1.0.1",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.13",
@@ -30,6 +31,7 @@
     "vue-tsc": "^2.2.0"
   },
   "devDependencies": {
+    "@types/wicg-file-system-access": "^2023.10.6",
     "sass": "^1.83.4",
     "typescript": "^5.7.3",
     "vite": "^6.0.11",
