--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdit/plugin-align": "^0.16.0",
     "@mdit/plugin-attrs": "^0.16.7",
     "@mdit/plugin-container": "^0.16.0",
+    "@mdit/plugin-embed": "^0.22.1",
     "@timohausmann/quadtree-ts": "^2.2.2",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vueuse/components": "^12.5.0",
