--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "colorjs.io": "^0.5.2",
     "gsap": "^3.12.7",
     "idb-keyval": "^6.2.2",
+    "jszip": "^3.10.1",
     "typescript-cubic-spline": "^1.0.1",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.13",
