--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host --mode prod",
+    "dev": "vite --host",
     "build": "vue-tsc && vite build --mode prod",
-    "build:dev": "vue-tsc && vite build --mode dev",
     "preview": "vite preview --host"
   },
   "dependencies": {
