--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
     "@types/wicg-file-system-access": "^2023.10.6",
+    "@types/yandex-metrika-tag": "^2.0.7",
     "@typescript-eslint/parser": "^8.6.0",
     "eslint": "^9.11.1",
     "rollup-plugin-visualizer": "^6.0.3",
